[package]
edition = "2021"
name    = "esp32-aliyun-rust-no_std"
version = "0.1.0"

[[bin]]
name = "esp32-aliyun-rust-no_std"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32",
  "unstable",
] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "tcp",
  "udp",
  "dns",
] }
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
embassy-executor = { version = "0.7", package = "embassy-executor", features = ["nightly"] }
embassy-time = { version = "0.4.0" }
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
esp-wifi = { version = "0.14.1", features = [
  "esp32",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["tls"] }
hmac-sha256 = "1.1.12"
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls", features = ["esp32", "async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
lto = 'fat'
opt-level = 's'
